working on responsive design for HTML page.

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,11 @@
 </hgroup>
 </header>
 
-<input type="text" placeholder="Give your trip a name">
+<div class="container">
+<section>
+<p><input type="text" placeholder="Give your trip a name">
 
-<select>
+<p><select>
 <option>Who's going?
 <option>Single
 <option>Couple
@@ -25,37 +27,27 @@
 <option>Family with tweens
 <option>Family with teenagers
 <option>Group of adults
+</select>
+</p>
+<p><input type="text" placeholder="Describe your trip"></p>
 
-<input type="text" placeholder="Describe your trip">
-
-<section>
+<article>
 <h1>Enter a location</h1>
-<input type="text" placeholder="Name of location">
-<input type="text" placeholder="Description of location">
-<input type="file" accept="image/*">
-</section>
+<p><input type="text" placeholder="Name of location">
+<p><input type="text" placeholder="Description of location">
+<p><input type="file" accept="image/*">
+</article>
 
 <input type="text" placeholder="Enter some tags">
+</section>
 
-<footer>
-<nav>
-<h1>
-<ul>
-<li>One</li>
-<li>Two</li>
-<li>Three</li>
-</h1>
-</nav>
-<nav>
-<h1>
-<ul>
-<li>Four</li>
-<li>Five</li>
-<li>Six</li>
+<aside>
+	Sidebar content
 
-</h1>
-</nav>
-</footer>
+
+</aside>
+</div>
+
 
 </body>
 
