--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 <p><input type="text" placeholder="Give your trip a name">
 
 <p><select>
-<option>Who's going?
+<option>Who went?
 <option>Single
 <option>Couple
 <option>Family with small kids
