creating responsive branch

--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,20 @@
 <meta charset="utf-8" />
 <link rel="stylesheet" href="css/styles.css" />
 <script src="js/modernizr.js"></script>
+<link href='http://fonts.googleapis.com/css?family=Fira+Sans:400,500' rel='stylesheet' type='text/css'>
 <title>Scout About</title>
 </head>
 
 <body>
 <header>
 <hgroup>
-<h1>My Day</h1>
-<p>Share your adventure</p>
+Global header
 </hgroup>
 </header>
 
 <div class="container">
+<h1>My Day</h1>
+<p>Share your adventure</p>
 <section>
 <p><input type="text" placeholder="Give your trip a name">
 
@@ -29,7 +31,7 @@
 <option>Group of adults
 </select>
 </p>
-<p><input type="text" placeholder="Describe your trip"></p>
+<p><input type="text" class="desc" placeholder="Describe your trip"></p>
 
 <article>
 <h1>Enter a location</h1>
