--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app>
 <head>
 <meta charset="utf-8" />
 <link rel="stylesheet" href="css/styles.css" />
 <script src="js/modernizr.js"></script>
+<script src="/node_modules/angular/angular.js"></script>
+<script src=""></script>
 <link href='http://fonts.googleapis.com/css?family=Fira+Sans:400,500' rel='stylesheet' type='text/css'>
 <title>Scout About</title>
 </head>
 
-<body>
+<body ng-controller="dayBreakController">
 <header>
 <hgroup>
-Global header
+sign up || log in || avatar || profile
 </hgroup>
 </header>
 
@@ -36,7 +38,7 @@ Global header
 <article>
 <h1>Enter a location</h1>
 <p><input type="text" placeholder="Name of location">
-<p><input type="text" placeholder="Description of location">
+<p><input type="text" class="desc" placeholder="Describe this location">
 <p><input type="file" accept="image/*">
 </article>
 
@@ -50,7 +52,7 @@ Global header
 </aside>
 </div>
 
-
+<script src="js/main.js"></script>
 </body>
 
 </html>
