--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@ sign up || log in || avatar || profile
 <form id="enterTrip" data-ng-submit="Trip.enterTrip()">
 
 <section>
-<p><input type="text" placeholder="Give your trip a name">
+<p><input type="text" data-ng-model="Trip.tripName" placeholder="Give your trip a name">
 
 <p><select>
 <option>Who went?
@@ -57,8 +57,7 @@ sign up || log in || avatar || profile
 
 </aside>
 </div>
-<script src="../node_modules/angular/angular.js"></script>
-<script src="js/main.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script><script src="js/main.js"></script>
 
 
 </body>
