--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@ sign up || log in || avatar || profile
 <div id="locURL">URL: {{Location.getURL}}</div>
 <p><input type="text" data-ng-model="Location.locationDesc" class="desc controls" placeholder="Describe this location">
 
-
+//MH here next
 
 <p><input type="file" accept="image/*">
 </article>
@@ -63,12 +63,24 @@ sign up || log in || avatar || profile
 <input type="submit">Clicky!</input>
 </form>
 
+<div ng-show="myValue">
+
+<p> A Good Day </p>
+
+
+</div>
 
 <aside>
  <div id="map-canvas">map</div>
 
-
 </aside>
+
+
+ 
+
+
+
+
 </div>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
