--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,11 @@
 </head>
 
 <body>
+
 <header>
-<hgroup>
-sign up || log in || avatar || profile
-</hgroup>
+	<hgroup>
+	sign up || log in || avatar || profile
+	</hgroup>
 </header>
   
 <div class="container" data-ng-controller="tripController as Trip">
@@ -26,6 +27,8 @@ sign up || log in || avatar || profile
 
 <section>
 <p><input type="text" data-ng-model="Trip.tripName" placeholder="Give your trip a name">
+
+<p><input type="text" data-ng-model="Trip.userName" placeholder ="user name" value="testuser" hidden >
 
 <p><select data-ng-model="Trip.tripGroup" placeholder="Who went?">
 <option value="single">Single
@@ -38,6 +41,7 @@ sign up || log in || avatar || profile
 </p>
 <p><input type="text" data-ng-model="Trip.tripDesc" class="desc" placeholder="Describe your trip"></p>
 
+
 <!-- LOCATION -->
 
 <article data-ng-controller="locationController as Location">
@@ -49,9 +53,10 @@ sign up || log in || avatar || profile
 <div id="locURL">URL: {{Location.getURL}}</div>
 <p><input type="text" data-ng-model="Location.locationDesc" class="desc controls" placeholder="Describe this location">
 
-//MH here next
 
 <p><input type="file" accept="image/*">
+
+
 </article>
 <!-- END LOCATION BOX -->
 
@@ -64,24 +69,15 @@ sign up || log in || avatar || profile
 </form>
 
 <div ng-show="myValue">
-
-<p> A Good Day </p>
-
-
+	<p> A Good Day </p>
 </div>
 
 <aside>
- <div id="map-canvas">map</div>
-
+	<div id="map-canvas">map</div>
 </aside>
 
-
- 
-
-
-
-
 </div>
+
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
 <script src="js/main.js"></script>
