--- a/public/show.html
+++ b/public/show.html
@@ -10,35 +10,71 @@
 
 </head>
 
-<body>
+<body ng-app='app'>
+
 <header>
 <hgroup>
 sign up || log in || avatar || profile
 </hgroup>
 </header>
   
-<div class="container" data-ng-controller="tripController as Trip">
-
+<div ng-controller="PostsCtrl"  class="container">
 <h1>My Day</h1>
-
-<p>Share your adventure!!!</p>
+<p>Here's a list of great Days!</p>
  
- 
-
-<p> A Good Day </p>
-
 <ul class='list-group'>
-	<li ng-repeat="Day in Days | orderBy: '-date'" class='list-group-item'>
-	{{Days}}
-
+	<li ng-repeat="day in days | orderBy:'-tripCreateDate' " class='list-group-item'> 	
+ 		Title: 			{{ 	day.tripName }}
+ 		<br>
+		User: 			{{ 	day.userName }}
+		<br>
+		Trip Date: 		{{ 	day.tripDate}}
+		<br>
+ 		Reporting Date: {{ 	day.tripCreateDate  }}
+ 		<br>
+ 		Updated on: 	{{	day.tripUpdateDate  }}
+		<br>
+		Description: 	{{	day.tripDesc}}
+		<br>
+		Who was there: 	{{	day.tripGroup}}
+		<br>
+		Tags: 			{{	day.tags}}
+		<br>
+		Locations: 		{{	day.locations}}
+      	<br>
 	</li>
 </ul>
 
 </div>
+
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+
+<script>
+	var app = angular.module('app',[]);
+	app.controller('PostsCtrl', function($scope, $http){
+
+		// $scope.days = [ {titleName	: 'my favorite trip',
+		// 				 userName	: 'joe'}
+		// 				 ,
+		// 			    {titleName	: 'what a day',
+		// 			     userName	: 'bill'      }]
+
+		$http.get('http://localhost:3000/api/show')
+			.success(function(days){
+				$scope.days = days;
+		})
+})
+
+//TEMP DELETE
+// 	function(){
+// 		if ($scope.postBody)
+
+
+// 	}	
+// })
+</script>
  
 
- 
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
 <script src="js/main.js"></script>
 
