--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 
 <p><input type="text" data-ng-model="Trip.userName" placeholder ="user name" value="testuser" hidden >
 
-<p><select data-ng-model="Trip.tripGroup" placeholder="Who went?">
+<p><select data-ng-model="Trip.tripGroup"  >
 <option value="single">Single
 <option value="couple">Couple
 <option value="fsk">Family with small kids
@@ -40,6 +40,44 @@
 </select>
 </p>
 <p><input type="text" data-ng-model="Trip.tripDesc" class="desc" placeholder="Describe your trip"></p>
+
+
+
+
+<div  class="container">
+<h1>My Day</h1>
+<p>Here's a list of great Days!</p>
+ 
+<ul data-ng-model="Trip.day"  data-ng-show="Trip.showDays($index)"  class='list-group' >
+	<li  class='list-group-item'> 	
+ 		Title: 			{{ 	day.tripName }}
+ 		<br>
+		User: 			{{ 	day.userName }}
+		<br>
+		Trip Date: 		{{ 	day.tripDate}}
+		<br>
+ 		Reporting Date: {{ 	day.tripCreateDate  }}
+ 		<br>
+ 		Updated on: 	{{	day.tripUpdateDate  }}
+		<br>
+		Description: 	{{	day.tripDesc}}
+		<br>
+		Who was there: 	{{	day.tripGroup}}
+		<br>
+		Tags: 			{{	day.tags}}
+		<br>
+		Locations: 		{{	day.locations}}
+      	<br>
+	</li>
+</ul>
+
+</div>
+
+
+
+
+
+
 
 
 <!-- LOCATION -->
@@ -52,10 +90,12 @@
 
 <div id="locURL">URL: {{Location.getURL}}</div>
 <p><input type="text" data-ng-model="Location.locationDesc" class="desc controls" placeholder="Describe this location">
+</p>
 
+<p>
+Share a picture from your Day - <input type="file" accept="image/*" >
 
-<p><input type="file" accept="image/*">
-
+</p>
 
 </article>
 <!-- END LOCATION BOX -->
@@ -65,6 +105,8 @@
 <input type="text" placeholder="Enter some tags">
 
 </section>
+
+
 <input type="submit">Clicky!</input>
 </form>
 
@@ -76,6 +118,14 @@
 	<div id="map-canvas">map</div>
 </aside>
 
+
+
+
+
+
+
+
+
 </div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
@@ -86,3 +136,6 @@
 </body>
 
 </html>
+
+<!-- 
+data-ng-repeat="day in Trip.showDays()  | orderBy:'-tripCreateDate' "-->
