--- a/public/show.html
+++ b/public/show.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-ng-app="app">
+<html lang="en" data-ng-app="dayBreak">
 <head>
 
 <meta charset="utf-8" />
@@ -24,24 +24,15 @@ sign up || log in || avatar || profile
  
 <ul class='list-group'>
 	<li ng-repeat="day in days | orderBy:'-tripCreateDate' " class='list-group-item'> 	
- 		Title: 			{{ 	day.tripName }}
- 		<br>
-		User: 			{{ 	day.userName }}
-		<br>
-		Trip Date: 		{{ 	day.tripDate}}
-		<br>
- 		Reporting Date: {{ 	day.tripCreateDate  }}
- 		<br>
- 		Updated on: 	{{	day.tripUpdateDate  }}
-		<br>
-		Description: 	{{	day.tripDesc}}
-		<br>
-		Who was there: 	{{	day.tripGroup}}
-		<br>
-		Tags: 			{{	day.tags}}
-		<br>
-		Locations: 		{{	day.locations}}
-      	<br>
+ 		Title: 			{{ 	day.tripName }}<br>
+		User: 			{{ 	day.userName }}<br>
+		Trip Date: 		{{ 	day.tripDate}}<br>
+ 		Reporting Date: {{ 	day.tripCreateDate  }}<br>
+ 		Updated on: 	{{	day.tripUpdateDate  }}<br>
+		Description: 	{{	day.tripDesc}}<br>
+		Who was there: 	{{	day.tripGroup}}<br>
+		Tags: 			{{	day.tags}}<br>
+		Locations: 		{{	day.locations}}<br>
 	</li>
 </ul>
 
@@ -50,23 +41,22 @@ sign up || log in || avatar || profile
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 
 <script>
-	var app = angular.module('app',[]);
-	app.controller('daysController', function($scope, $http){
-		// $scope.days = [ {tripName	: 'my favorite trip',
-		// 				 userName	: 'joe'}
-		// 				 ,
-		// 			    {tripName	: 'what a day',
-		// 			     userName	: 'bill'      }]
-		$http.get('/api/show')
-			.success(function(days){
-				$scope.days = days;
-		})
-})
-//TEMP DELETE
-// 	function(){
-// 		if ($scope.postBody)
-// 	}	
+//Now moved to file daysController.js
+//
+// 	var app = angular.module('app',[]);
+// 	app.controller('daysController', function($scope, $http){
+// 		// $scope.days = [ {tripName	: 'my favorite trip',
+// 		// 				 userName	: 'joe'}
+// 		// 				 ,
+// 		// 			    {tripName	: 'what a day',
+// 		// 			     userName	: 'bill'      }]
+// 		$http.get('/api/show')
+// 			.success(function(days){
+// 				$scope.days = days;
+// 		})
 // })
+
+
 </script>
  
 
