--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <body>
 <header>
 <hgroup>
-sign up || log in || avatar || profile
+sign up || log in || avatar || <span data-ng-show="">profile</span>
 </hgroup>
 </header>
   
@@ -63,12 +63,44 @@ sign up || log in || avatar || profile
 <input type="submit">Clicky!</input>
 </form>
 
+<div ng-controller="daysController"  class="container">
+<h1>My Day</h1>
+<p>Here's a list of great Days!</p>
+ 
+<ul class='list-group' >
+	<li class='list-group-item' ng-repeat="day in days | orderBy:'-tripCreateDate' "> 	
+ 		Title: 			{{ 	day.tripName }}
+ 		<br>
+		User: 			{{ 	day.userName }}
+		<br>
+		Trip Date: 		{{ 	day.tripDate}}
+		<br>
+ 		Reporting Date: {{ 	day.tripCreateDate  }}
+ 		<br>
+ 		Updated on: 	{{	day.tripUpdateDate  }}
+		<br>
+		Description: 	{{	day.tripDesc}}
+		<br>
+		Who was there: 	{{	day.tripGroup}}
+		<br>
+		Tags: 			{{	day.tags}}
+		<br>
+		Locations: 		{{	day.locations}}
+      	<br>
+	</li>
+</ul>
+
+</div>
 
 <aside>
  <div id="map-canvas">map</div>
 
 
 </aside>
+
+
+
+
 </div>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
