--- a/public/index.html
+++ b/public/index.html
@@ -65,10 +65,10 @@
 <p><input type="text" data-ng-model="Location.locationDesc" class="desc controls" placeholder="Describe this location">
 </p>
 
-<p>
+<h5>
 Share a picture from your Day - <input type="file" accept="image/*" >
 
-</p>
+</h5>
 
 </article>
 <!-- END LOCATION BOX -->
@@ -90,8 +90,8 @@ Share a picture from your Day - <input type="file" accept="image/*" >
 
  
 <div ng-controller="daysController"  class="container">
-<h1>My Day</h1>
-<p>Here's a list of great Days!</p>
+<h3>Great Days Shared by Our Community</h3>
+<h5>Here's a list of great Days!</h5>
  
 <ul class='list-group'>
 	<li ng-repeat="day in days" class='list-group-item'> 	
@@ -127,6 +127,10 @@ Share a picture from your Day - <input type="file" accept="image/*" >
 </div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+
+<!-- mh adds -->
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
+
 <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
 <script src="js/main.js"></script>
 
@@ -134,6 +138,3 @@ Share a picture from your Day - <input type="file" accept="image/*" >
 </body>
 
 </html>
-
-<!-- 
-data-ng-repeat="day in Trip.showDays()  | orderBy:'-tripCreateDate' "-->
