--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,48 @@
 </head>
 
 <body>
-
-<header>
+ 
+<!-- <header>
 	<hgroup>
 	sign up || log in || avatar || profile
 	</hgroup>
-</header>
-  
+</header> -->
+
+<nav class = 'navbar navbar-default'>
+	<div class="container">
+		<ul class='nav navbar-nav'>
+			<li><a href="/#/"> 			Home 	 </a></li>
+			<li><a href="/#/register/"> Register </a></li>
+  			<li><a href="/#/login"> 	Login 	 </a></li>
+  		</ul>
+	</div>
+</nav>
+
+
+<div data-ng-controller = "loginController" class="container">
+
+		<form >
+			<div class="form group">
+					<label>Username</label>
+					<input class= "form-control" type="text" ng-model="loginController.username">
+			</div>
+			<div class="form group">
+					<label>Password</label>
+					<input class= "form-control" type="password" ng-model="loginController.password">
+			</div>
+			<div class="form group">
+					<label>E-Mail</label>
+					<input class= "form-control" type="text" ng-model="loginController.email">
+			</div>
+			<br>
+			<input data-ng-click="loginController.adduser()" class="btn btn-success btn-sm btn-block" type="submit" value="login">
+
+		</form>
+</div>
+
+ 
+
+
 <div class="container" data-ng-controller="tripController as Trip">
 <h1>My Day</h1>
 <p>Share your adventure</p>
@@ -33,9 +68,9 @@
 <p><select data-ng-model="Trip.tripGroup"  >
 <option value="single">Single
 <option value="couple">Couple
-<option value="fsk">Family with small kids
-<option value="fwtweens">Family with tweens
-<option value="fwteens">Family with teenagers
+<option value="family-w-small-kids">Family with small kids
+<option value="family-w-tweens">Family with tweens
+<option value="family-w-teens">Family with teenagers
 <option value="adults">Group of adults
 </select>
 </p>
@@ -119,21 +154,15 @@ Share a picture from your Day - <input type="file" accept="image/*" >
 
 
 
-
-
-
-
-
 </div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 
-<!-- mh adds -->
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
-
 <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
 <script src="js/main.js"></script>
 
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
 </body>
 
