--- a/public/index.html
+++ b/public/index.html
@@ -30,23 +30,23 @@
 </nav>
 
 
-<div data-ng-controller = "loginController" class="container">
+<div data-ng-controller = "userController" class="container">
 
 		<form >
 			<div class="form group">
 					<label>Username</label>
-					<input class= "form-control" type="text" ng-model="loginController.username">
+					<input class= "form-control" type="text" ng-model="userController.username">
 			</div>
 			<div class="form group">
 					<label>Password</label>
-					<input class= "form-control" type="password" ng-model="loginController.password">
+					<input class= "form-control" type="password" ng-model="userController.password">
 			</div>
 			<div class="form group">
 					<label>E-Mail</label>
-					<input class= "form-control" type="text" ng-model="loginController.email">
+					<input class= "form-control" type="text" ng-model="userController.email">
 			</div>
 			<br>
-			<input data-ng-click="loginController.adduser()" class="btn btn-success btn-sm btn-block" type="submit" value="login">
+			<input data-ng-click="userController.adduser()" class="btn btn-success btn-sm btn-block" type="submit" value="Register">
 
 		</form>
 </div>
