userController start message

--- a/public/index.html
+++ b/public/index.html
@@ -34,19 +34,19 @@
 
 		<form >
 			<div class="form group">
-					<label>Username</label>
-					<input class= "form-control" type="text" ng-model="userController.username">
+				<label>Username</label>
+				<input class= "form-control" type="text" ng-model="userController.username">
 			</div>
 			<div class="form group">
-					<label>Password</label>
-					<input class= "form-control" type="password" ng-model="userController.password">
+				<label>Password</label>
+				<input class= "form-control" type="password" ng-model="userController.password">
 			</div>
 			<div class="form group">
-					<label>E-Mail</label>
-					<input class= "form-control" type="text" ng-model="userController.email">
+				<label>E-Mail</label>
+				<input class= "form-control" type="text" ng-model="userController.email">
 			</div>
 			<br>
-			<input data-ng-click="userController.adduser()" class="btn btn-success btn-sm btn-block" type="submit" value="Register">
+			<input data-ng-click="userController.adduser()" class="btn btn-success btn-sm btn-block" type="submit" value="Register Now">
 
 		</form>
 </div>
