--- a/public/index.html
+++ b/public/index.html
@@ -24,15 +24,13 @@
 <h1>My Day</h1>
 <p>Share your adventure</p>
 
-<form id="enterTrip" data-ng-submit="Trip.enterTrip()">
 
 <section>
+<div data-ng-form name="mainForm">
 <p><input type="text" data-ng-model="Trip.tripName" placeholder="Give your trip a name">
-
 <p><input type="text" data-ng-model="Trip.userName" placeholder ="user name" value="testuser" hidden >
-
-<p><select data-ng-model="Trip.tripGroup"  >
-<option value="single">Single
+<p><select data-ng-model="Trip.tripGroup">
+<option value="single" selected>Single
 <option value="couple">Couple
 <option value="fsk">Family with small kids
 <option value="fwtweens">Family with tweens
@@ -43,49 +41,35 @@
 <p><input type="text" data-ng-model="Trip.tripDesc" class="desc" placeholder="Describe your trip"></p>
 
 
-
-
- 
-
-
-
-
-
-
-
-
 <!-- LOCATION -->
-
-<article data-ng-controller="locationController as Location">
+<div data-ng-controller="locationController as Location">
+<!-- <div data-ng-repeat="Location in FORMS"> -->
+<div data-ng-form="subForm" style="border:1px solid red;">
 <h1>Find a location</h1>
-<input type="text" data-ng-model="Location.locationName" id="pac-input" placeholder="Enter the name of location" data-ng-change="Location.getName()">
-
-
-
-<div id="locURL">URL: {{Location.getURL}}</div>
-<p><input type="text" data-ng-model="Location.locationDesc" class="desc controls" placeholder="Describe this location">
-</p>
-
+<input type="text" id="pac-input" placeholder="Enter the name of location" data-ng-model="Location.locName">
+<div id="locName">
+<a data-ng-href="{{locURL}}" target="_blank">{{locName}}</a>
+</div>
+Location.locName = {{locName}}
+<input type="text" data-ng-model="Location.locationDesc" class="desc controls" placeholder="Describe this location">
 <p>
 Share a picture from your Day - <input type="file" accept="image/*" >
-
 </p>
-
-</article>
+<button type="button" data-ng-click="Location.addLoc(Location)"></button>
+</div>
+<!-- </div>
+ -->
 <!-- END LOCATION BOX -->
 
-<!-- <input type="text" data-ng-controller="tagController as Tag" data-ng-model="Tag.tagList" placeholder="Enter some tags"> -->
-
 <input type="text" placeholder="Enter some tags">
-
+<!-- <input type="text" data-ng-controller="tagController as Tag" data-ng-model="Tag.tagList" placeholder="Enter some tags"> -->
+<input type="submit">
 </section>
 
 
-<input type="submit">Clicky!</input>
-</form>
 
 
-<div ng-controller="daysController"  class="container">
+<div data-ng-controller="daysController"  class="container">
 <h1>My Day</h1>
 <p>Here's a list of great Days!</p>
 
