tweak to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,8 @@
 
 <input type="text" data-ng-model="Location.locationDesc" class="desc controls" placeholder="Describe this location">
 <p>
+<!-- TODO: Add functionality for uploading photos -->
+
 Share a picture from your Day - <input type="file" accept="image/*" >
 </p>
 <button type="button" data-ng-click="Location.addLoc(Location)"></button>
