--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
 
 <section>
 <div data-ng-form name="mainForm">
+<!-- TODO: insert dynamic tripID-->
 <p><input type="text" data-ng-model="Trip.tripName" placeholder="Give your trip a name">
 <p><input type="text" data-ng-model="Trip.userName" placeholder ="user name" value="testuser" hidden >
 <p><select data-ng-model="Trip.tripGroup">
@@ -40,27 +41,27 @@
 </p>
 <p><input type="text" data-ng-model="Trip.tripDesc" class="desc" placeholder="Describe your trip"></p>
 
-
 <!-- LOCATION -->
 <div data-ng-controller="locationController as Location">
-<!-- <div data-ng-repeat="Location in FORMS"> -->
+
 <div data-ng-form="subForm" style="border:1px solid red;">
 <h1>Find a location</h1>
 <input type="text" width="200" id="pac-input" placeholder="Enter the name of location" data-ng-model="Location.locName">
-<div id="locName">
+
+<div>
 <a data-ng-href="{{locURL}}" target="_blank">{{locName}}</a>
 </div>
 
 <input type="text" data-ng-model="Location.locationDesc" class="desc controls" placeholder="Describe this location">
 <p>
 <!-- TODO: Add functionality for uploading photos -->
-
-Share a picture from your Day - <input type="file" accept="image/*" >
+Share a picture from your Day - <input type="file" accept="image/*">
+<!-- TODO -->
 </p>
-<button type="button" data-ng-click="Location.addLoc(Location)"></button>
+
+<input type="button" data-ng-click="Location.addLoc(Location)"/>
 </div>
-<!-- </div>
- -->
+</div>
 <!-- END LOCATION BOX -->
 
 <input type="text" placeholder="Enter some tags">
