--- a/public/index.html
+++ b/public/index.html
@@ -1,46 +1,68 @@
 <!DOCTYPE html>
 <html lang="en" data-ng-app="dayBreak">
 <head>
-
-<meta charset="utf-8" />
-<link rel="stylesheet" href="css/styles.css" />
-<script src="js/modernizr.js"></script>
-<link href='http://fonts.googleapis.com/css?family=Fira+Sans:400,500' rel='stylesheet' type='text/css'>
-<title>Day Break</title>
-<style>#map-canvas{width:100%;height:100%;border:1px solid red;}
-</style>
+	<meta charset="utf-8" />
+    <meta property="og:type" content="website">
+	<meta property="og:title" content="Daybreak is the pefect way to share your Perfect Day.">
+    <meta property="og:description" content="Use Daybreak discover other people's favorite days and favorite places, and share your perfect day.">
+	<link rel="stylesheet" href="css/styles.css" />
+	<script src="js/modernizr.js"></script>
+	<link href='http://fonts.googleapis.com/css?family=Fira+Sans:400,500' rel='stylesheet' type='text/css'>
+	<title>Daybreak - Share and Find the Perfect Day</title>
+	<style>#map-canvas{width:100%;height:100%;border:1px solid red;}</style>
 </head>
 
 <body>
- 
-<nav class = 'navbar navbar-default'>
-	<div class="container">
-		<ul class='nav navbar-nav'>
-			<li><a href="/#/"> 			Home 	 </a></li>
-			<li><a href="/#/register/"> Register </a></li>
-  			<li><a href="/#/login"> 	Login 	 </a></li>
 
-	  		<li><a href="/#/signout"  data-ng-click="User.signOut()">Sign out
-	  		</a></li>
-
-  			<li><a><div data-ng-controller= "userController as User">
-  						<div data-ng-model="User">
-  							User Name: {{data.user}}
-   						</div>
-  					</div>	</a></li> 
-			<li><a> 
-				<!-- <div data-ng-model="User">
-					<div ng-if='User' class = "navbar-text navbar-right">
-						Signed in as {{currentUser.username}}
-					</div>
-				</div> -->
-			</a></li> 
-  		</ul>
-	</div>
+<div data-ng-controller= "userController as User">
+ <nav class = 'navbar navbar-default'>
+  <div class="container">
+	<ul class='nav navbar-nav'>
+	  <li><a href="/"> Home </a></li>
+ 	  <li> <a data-ng-click="User.signOut()" 
+	  	   data-ng-show="User.userState==='loggedIn'"> Logout</a></li>
+	  <li> <a data-ng-click="RegOrLog ='Log' "
+	   	data-ng-show="User.userState==='loggedOut'">
+	   	Login</a></li>
+  	  <li><a data-ng-click="RegOrLog ='Reg' " 
+  	  	data-ng-show="User.userState==='loggedOut'"> 
+  	  	Register </a></li>
+   	  <li><a><div data-ng-model="User"  
+  	  	data-ng-show="User.userState==='loggedIn'" >
+  		Welcome: {{User.username}}
+	  	</div>	</a></li> 
+   	</ul>
+  </div>
 </nav>
 
+<div class = 'userContainer' 
+	data-ng-show="User.userState==='loggedOut' && 
+	(RegOrLog  === 'Log' || RegOrLog === 'Reg' )
+	"
+ 	>
 
-<div data-ng-controller= "userController as User" class="container" id="register">
+	<div id='login' 
+	  data-ng-show="User.userState === 'loggedOut' " 
+	  data-ng-if= "RegOrLog==='Log' "  >
+
+		<form data-ng-submit="User.login()">
+			<div class="form group">
+				<label>Username</label>
+				<input class= "form-control" type="text" ng-model="User.username">
+			</div>
+			<div class="form group">
+				<label>Password</label>
+				<input class= "form-control" type="password" ng-model="User.password">
+			</div>
+ 			<br>
+			<input class="btn btn-success btn-sm btn-block" type="submit" value="Login">	 
+		</form>
+	</div>
+<br>
+
+   <div id='register' 
+	 data-ng-show ="User.userState === 'loggedOut' "
+	 data-ng-if   ="RegOrLog==='Reg' " >
 
 		<form data-ng-submit="User.registerUser()">
 			<div class="form group">
@@ -63,35 +85,32 @@
 			<input class="btn btn-success btn-sm btn-block" type="submit" value="Register Now">
 			 
 		</form>
+ 	</div>
  <br>
-		<form data-ng-submit="User.login()">
-			<div class="form group">
-				<label>Username</label>
-				<input class= "form-control" type="text" ng-model="User.username">
-			</div>
-			<div class="form group">
-				<label>Password</label>
-				<input class= "form-control" type="password" ng-model="User.password">
-			</div>
- 			<br>
-			<input class="btn btn-success btn-sm btn-block" type="submit" value="Login">	 
-		</form>
 
-<br>
-
+	<div id='resetPassword' 
+ 		data-ng-show="User.userState === 'askingReset' "
+	  >
 		<form data-ng-submit="User.resetPassword()">
 			<div class="form group">
-				<label>E-Mail</label>
+				<label>Forgot Password? Enter E-Mail</label>
 				<input class= "form-control" type="text" ng-model="User.email">
 			</div>
 			<br>
 			<input class="btn btn-success btn-sm btn-block" type="submit" value="Send Password Reset Link"></input>
-			 
 		</form>
+ 	</div>
 
-      <button data-ng-click="User.signOut()">Sign out</button>
+ <!-- 
+	<div id="signout">
+   		   <button data-ng-click="User.signOut()">Sign out</button>
+    </div> -->
+ 
 
+	</div>
+  </div>
 </div>
+<br>
 
 
 
