--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 	</div>
 </nav>
 
-
+<!--
 <div data-ng-controller= "userController as User" class="container" id="register">
 		<form data-ng-submit="User.registerUser()">
 			<div class="form group">
@@ -73,7 +73,7 @@
 			 
 		</form>
 </div>
-
+-->
 <div class="container">
 <h1>My Day</h1>
 <p>Share your adventure</p>
@@ -96,34 +96,17 @@
 
 <input type="text" data-ng-model="Day.dayDesc" class="desc" placeholder="Describe your day">
 </div>
+
 <!-- LOCATION -->
-<div data-ng-controller="locationController as Location">
 
-<div data-ng-form="subForm" style="border:1px solid red;">
-<h1>Find a location</h1>
-<input type="text" width="200" id="pac-input" placeholder="Enter the name of location" data-ng-model="Location.locName">
-
-<div>
-	<a data-ng-href="{{locURL}}" target="_blank">{{locName}}</a>
-</div>
-
-
-<input type="text" data-ng-model="Location.locationDesc" class="desc controls" placeholder="Describe this location">
-<p>
-<!-- TODO: Add functionality for uploading photos -->
-Share a picture from your Day - <input type="file" accept="image/*">
-<!-- TODO -->
-</p>
-
-<input type="button" data-ng-click="Location.addLoc(Location)"/>
-</div>
-</div>
+<div data-ng-view></div>
 <!-- END LOCATION BOX -->
-<div data-ng-controller="tagController as Tag">
 
-<input type="text" data-ng-change="Tag.countTag()" placeholder="Enter some tags" data-ng-model="Tag.dayTags">
-<!-- <input type="text" data-ng-controller="tagController as Tag" data-ng-model="Tag.tagList" placeholder="Enter some tags"> -->
+<div data-ng-controller="tagController as Tag">
+<div>Use commas between tags.</div>
+<input type="text" id="tags" data-ng-change="Tag.enterTag()" placeholder="Enter some tags" data-ng-model="Tag.dayTags">
 </div>
+
 <input type="submit">
 </form>
 </div>
@@ -161,6 +144,7 @@ Share a picture from your Day - <input type="file" accept="image/*">
 </div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
 
 <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
 <script src="js/main.js"></script>
