--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,6 @@
   </div>
 </nav>
 
-
 <div class = 'userContainer' 
 	data-ng-show="User.userState==='loggedOut' && 
 	(RegOrLog  === 'Log' || RegOrLog === 'Reg' )
@@ -113,7 +112,6 @@
     </div> -->
   
 </div>
-
 <br>
 
 
@@ -140,17 +138,34 @@
 
 <input type="text" data-ng-model="Day.dayDesc" class="desc" placeholder="Describe your day">
 </div>
-
 <!-- LOCATION -->
+<div data-ng-controller="locationController as Location">
 
-<div data-ng-view></div>
-<!-- END LOCATION BOX -->
+<div data-ng-form="subForm" style="border:1px solid red;">
+<h1>Find a location</h1>
+<input type="text" width="200" id="pac-input" placeholder="Enter the name of location" data-ng-model="Location.locName">
 
-<div data-ng-controller="tagController as Tag">
-<div>Use commas between tags.</div>
-<input type="text" id="tags" data-ng-change="Tag.enterTag()" placeholder="Enter some tags" data-ng-model="Tag.dayTags">
+<div>
+	<a data-ng-href="{{locURL}}" target="_blank">{{locName}}</a>
 </div>
 
+
+<input type="text" data-ng-model="Location.locationDesc" class="desc controls" placeholder="Describe this location">
+<p>
+<!-- TODO: Add functionality for uploading photos -->
+Share a picture from your Day - <input type="file" accept="image/*">
+<!-- TODO -->
+</p>
+
+<input type="button" data-ng-click="Location.addLoc(Location)"/>
+</div>
+</div>
+<!-- END LOCATION BOX -->
+<div data-ng-controller="tagController as Tag">
+
+<input type="text" data-ng-change="Tag.countTag()" placeholder="Enter some tags" data-ng-model="Tag.dayTags">
+<!-- <input type="text" data-ng-controller="tagController as Tag" data-ng-model="Tag.tagList" placeholder="Enter some tags"> -->
+</div>
 <input type="submit">
 </form>
 </div>
@@ -163,16 +178,16 @@
   
 <ul class='list-group'>
 	<li data-ng-repeat="day in days" class='list-group-item'> 
- 		Title: 			{{ 	day.dayName }}<br>
-		User: 			{{ 	day.userName }}<br>
-		Day Date: 		{{ 	day.dayDate}}<br>
- 		Reporting Date: {{ 	day.dayCreateDate  }}<br>
- 		Updated on: 	{{	day.dayUpdateDate  }}<br>
-		Description: 	{{	day.dayDesc}}<br>
-		Who was there: 	{{	day.dayGroup}}<br>
-		Tags: 			{{	day.dayTags}}<br>
-		Locations: 		{{	day.locations}}<br>
 
+ 		Title: 			{{ 	day.dayName }}		<br>
+		User: 			{{ 	day.userName }}		<br>
+		Day Date: 		{{ 	day.dayDate}}		<br>
+ 		Reporting Date: {{ 	day.dayCreateDate}}	<br>
+ 		Updated on: 	{{	day.dayUpdateDate}}	<br>
+		Description: 	{{	day.dayDesc}}		<br>
+		Who was there: 	{{	day.dayGroup}}		<br>
+		Tags: 			{{	day.dayTags}} 		<br>
+		Locations: 		{{	day.locations}}		<br>
 	</li>
 </ul>
 
@@ -189,7 +204,6 @@
 </div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
 
 <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
 <script src="js/main.js"></script>
