--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta property="og:type" content="website">
 	<meta property="og:title" content="Daybreak is the pefect way to share your Perfect Day.">
     <meta property="og:description" content="Use Daybreak discover other people's favorite days and favorite places, and share your perfect day.">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/styles.css" />
 	<script src="js/modernizr.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Fira+Sans:400,500' rel='stylesheet' type='text/css'>
@@ -125,7 +126,6 @@
 <p>Share your adventure</p>
 
 <section>
-
 <div data-ng-controller="dayController as Day">
 	<form data-ng-submit="Day.addDay()">
 	<input type="hidden" data-ng-model="Day.userName" value="joey">
@@ -144,42 +144,35 @@
 </div>
 
 <!-- LOCATION -->
-
-<!-- <div data-ng-view></div> -->
-
-<div data-ng-controller="locationController as Location">
-
-<div data-ng-form="subForm" style="border:1px solid red;">
+<div data-ng-controller="locationController as Location" style="border:1px solid red;">
 <h1>Find a location</h1>
-<input type="text" width="200" id="pac-input" placeholder="Enter the name of location" data-ng-model="Location.locName">
 
+<input type="text" width="200" id="pac-input" placeholder="Enter the name of location" data-ng-model="Location.locName">
 <div>
 	<a data-ng-href="{{locURL}}" target="_blank">{{locName}}</a>
 </div>
 
-
 <input type="text" data-ng-model="Location.locationDesc" class="desc controls" placeholder="Describe this location">
 
-<!-- TODO: Add functionality for uploading photos -->
+<!--TODO: Add functionality for uploading photos -->
 <div>Share a picture from your Day - <input type="file" accept="image/*"></div>
-<!-- TODO -->
+<!--TODO-->
 
-<div href="#addLocation" data-ng-click="Location.addLoc(Location)">Add this location.</div>
+<div data-ng-click="Location.addLoc(Location)">Add this location.</div>
 </div>
-</div>
-
 <!-- END LOCATION BOX -->
 
 <div data-ng-controller="tagController as Tag">
 <div>Use commas between tags.</div>
 <input type="text" id="tags" data-ng-change="Tag.enterTag()" placeholder="Enter some tags" data-ng-model="Tag.dayTags">
 </div>
-
-<input type="submit">
-</form>
+<input type="submit">Add this day</submit>
 </div>
+</form>
 </section>
-
+<div ng-controller="locationController">
+  <div location-list></div>
+</div>
 
 <div data-ng-controller="dayController" class="container">
 <h3>Great Days Shared by Our Community</h3>
@@ -214,13 +207,8 @@
 
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
-
 <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
 <script src="js/main.js"></script>
-
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
 </body>
 
 </html>
