--- a/public/index.html
+++ b/public/index.html
@@ -102,50 +102,104 @@
 				</div>
 			</div>
 			
+
+
 		   	<div id='register'
-		   			ng-switch on='userViewSwitch'>
+		   			ng-switch on='userViewSwitch'
+ 		   			>
 		   		<div ng-switch-when='Reg' >
 					<form 
 						data-ng-submit="User.registerValidUser()"
-						name = "regForm" 
+ 						name = "regForm" 
 						novalidate>
 
 						<div class="form group">
-
 							<label>Username</label>
 							<input class= "form-control" 
 							type="text"
 							data-ng-blur="User.checkUsername()" 
-							data-ng-model="User.username">
-
+ 							data-ng-model="User.username"
+ 							placeholder="5 character minimum">
 						</div>
-
-
 
 						<div class="form group">
 							<label>Password</label>
-							<input class= "form-control" type="password" ng-model="User.password">
+							<input class= "form-control"
+							id='passwordFirst' 
+							type="password" 
+							name='password'
+							data-ng-model="User.password"
+							placeholder="Enter password">
 						</div>
+
 						<div class="form group">
 							<label>Password Confirmation</label>
-							<input class= "form-control" type="password" ng-model="User.passwordConfirm">
+							<input class= "form-control"
+							id='passwordConfirm' 
+							name='passwordConfirm'
+							type="password" 
+							data-ng-model="User.passwordConfirm"
+							placeholder="Reenter password">
 						</div>
+
 						<div class="form group">
 							<label>E-Mail</label>
-							<input class= "form-control" type="text" ng-model="User.email">
+							<input class= "form-control" 
+							type="text"
+							data-ng-blur="User.checkEmail()" 
+							data-ng-model="User.email"
+							placeholder="Required for password recovery.">
 						</div>
-						<p></p>
-						<input class="btn btn-success btn-sm btn-block" type="submit" value="Register Now">
+
+						<div >
+							<p>username is: 		{{User.username}}</p>
+							<p>email is   : 		{{User.email}}</p>
+							
+							<p>duplicateusername is: {{User.duplicateusername}}</p>
+							<p>duplicateemail is:	 {{User.duplicatemail}}</p>
+
+							<p>cheatnamepass is:  {{cheatnamepass}}</p>
+							
+							<p> regForm.$invalid 	 {{regForm.$invalid}} </p>
+
+							<!-- <button data-ng-disabled="createAccountForm.$invalid || User.dupeUsername || User.password !== User.passwordConfirmation">Sign up</button> -->
+						</div>
+
+						<input 
+						data-ng-disabled="
+						regForm.$invalid  			|| 
+						(User.password != User.passwordConfirm)"
+						class="btn btn-success btn-sm btn-block" 
+						type="submit" 
+						value="Register Now">
+
+
+						<div class="errMsg" 
+						data-ng-if="User.duplicateemail">
+						E-mail already in use.  Recover password now?</div>
+
+						<div class="errMsg" 
+						data-ng-if="User.duplicateusername">
+						User name already in use.</div>
+	
+             			<div class="errMsg" 
+             			data-ng-if="User.password !== User.passwordConfirm 
+             			&& regForm.passwordConfirm.$touched">
+             			Password confirmation does not match.</div>
+
 					</form>
 				</div>
 		 	</div>
 		 
 			<div id='resetPassword' ng-switch on='userViewSwitch'>
 				<div ng-switch-when='Reset'>
-					<form data-ng-submit="User.resetPassword()">	
+					<form 
+					data-ng-submit="User.resetPassword()">	
 						<div class="form group">
 							<label>Forgot Password? Enter E-Mail</label>
-							<input class= "form-control" type="text" ng-model="User.email">
+							<input class= "form-control" 
+							type="text" 
+							ng-model="User.email">
 						</div>
 						 <p></p>
 						<input class="btn btn-success btn-sm btn-block" type="submit" value="Send Password Reset Link"></input>
