--- a/public/locationList.html
+++ b/public/locationList.html
@@ -1,1 +1,1 @@
-<div ng-repeat="location in dayLocations">{{location.location}} {{location.url}} {{location.desc}}</div>
+<div ng-repeat="location in dayLocations">{{location.location}}<br/>{{location.desc}}</div>
